# cfg-to-cnf

./: CMakeLists.txt  README.md  main.cpp
CNF/: CNF_Converter.cpp  CNF_Converter.h  StringCombinatorics.cpp  StringCombinatorics.h
Core/: CFG_Engine.cpp  CFG_Engine.h  GrammarSymbol.cpp  GrammarSymbol.h  GrammarSymbolGenerator.cpp  GrammarSymbolGenerator.h  Production.cpp  Production.h
Utility/: ListUtility.h  VectorUtility.h
